--- a/hacking/fases.html
+++ b/hacking/fases.html
@@ -60,7 +60,31 @@
                 <div class="blog-image-grande">
                     <img src="media/fases2.jpg" alt="">
                 </div> 
-                <p></p>
+                <h2>MITRE ATT&CK</h2>
+                <p>MITRE ATT&CK es una base de conocimientos accesible globalmente que enumera las tácticas, técnicas y procedimientos (TTPs) utilizados por actores de amenazas en el mundo real. Desarrollado por MITRE Corporation, esta matriz ofrece una representación detallada de las diferentes etapas del ciclo de vida de un ciberataque, desde el acceso inicial hasta la exfiltración de datos.</p>
+                <p>La sigla ATT&CK significa: Adversarial, Tactics, Techniques and Common Knowledge.</p>
+                <p>La idea detrás de ATT&CK es proporcionar un marco para que los equipos de defensa entiendan mejor cómo los actores maliciosos operan, y así poder anticipar, detectar y mitigar estas amenazas de manera más efectiva.</p>
+                <div class="blog-image-grande">
+                    <img src="media/fases3.png" alt="">
+                </div> 
+                <h6>Tácticas</h6>
+                <p>Las tácticas son los objetivos estratégicos que un atacante busca lograr. Representan las fases de alto nivel de un ataque, como:</p>
+                <ul>
+                    <li><marcador class="resaltado2">Evasión: </marcador>Evitar la detección por parte de las defensas.</li>
+                    <li><marcador class="resaltado2">Exfiltración: </marcador>Extraer datos del sistema objetivo.</li>
+                </ul>
+                <h6>Técnicas</h6>
+                <p>Las técnicas representan los métodos específicos que los atacantes usan para alcanzar sus objetivos tácticos. Por ejemplo, bajo la táctica de "Evasión", una técnica puede ser "Desactivar herramientas de seguridad".</p>
+                <p>Cada técnica a menudo tiene una o más subtécnicas, que representan variaciones más detalladas de cómo se puede ejecutar esa técnica.</p>
+                <h6>Procedimientos</h6>
+                <p>Los procedimientos se refieren a la implementación específica de una técnica o sub-técnica en un ataque real. Estos procedimientos varían de un atacante a otro y suelen ser un reflejo de cómo los actores de amenazas implementan esas técnicas en un entorno específico.</p>
+                <h2>MITRE ATT&CK en Acción</h2>
+                <p>MITRE ATT&CK no es solo una herramienta para los investigadores de seguridad o analistas de inteligencia, sino que también es una plataforma práctica utilizada en muchas áreas de ciberseguridad. Los analistas pueden mapear actividades sospechosas o ataques conocidos en la matriz ATT&CK para identificar qué tácticas y técnicas fueron utilizadas en un incidente. Además, las organizaciones pueden usar ATT&CK para evaluar sus defensas, identificando brechas donde no tienen visibilidad o controles efectivos para detener técnicas específicas. Incluso, los equipos de seguridad pueden utilizar ATT&CK para guiar ejercicios de simulación de ataques, como los red teaming, y asegurarse de que están preparados para enfrentar incidentes reales.</p>
+                <p>Uno de los principales beneficios de MITRE ATT&CK es que ofrece un lenguaje común para describir ciberataques, lo que facilita la colaboración entre diferentes equipos de seguridad y permite a las organizaciones estandarizar sus evaluaciones. Además, ATT&CK proporciona una visibilidad profunda de cómo los atacantes realmente operan en los entornos actuales, lo que permite ajustar las estrategias defensivas de manera proactiva. La base de conocimientos de ATT&CK está alineada con técnicas observadas en ataques reales, lo que asegura que sus tácticas y técnicas reflejen las amenazas activas más recientes.</p>
+                <p>Existen múltiples herramientas y plataformas que han integrado MITRE ATT&CK para ayudar a los equipos de seguridad a mapear ataques y mejorar sus defensas. Herramientas como Elastic Security, Splunk, Microsoft Defender y Cortex XSOAR permiten visualizar los ataques en relación con la matriz ATT&CK y ofrecen automatización para mitigar técnicas específicas, lo que mejora la capacidad de respuesta y detección en entornos de seguridad.</p>
+                <p>Para más información y acceso directo a la matriz MITRE ATT&CK, puedes visitar su sitio oficial en <a href="https://attack.mitre.org/matrices/enterprise/" target="blank">https://attack.mitre.org/matrices/enterprise/</a>. En la web, encontrarás detalles sobre las tácticas, técnicas y procedimientos utilizados por actores maliciosos, así como guías para implementar ATT&CK en tus defensas de ciberseguridad. Además, MITRE ATT&CK ofrece recursos adicionales como informes, herramientas interactivas y actualizaciones sobre las últimas amenazas.</p>
+
+                <br>
             </div>
         </div>       
     </main>
