--- a/hacking.html
+++ b/hacking.html
@@ -82,6 +82,10 @@
             <img src="media/imagen4.png" alt="Fuzzing" class="article-image">
             <h2><a href="hacking/fuzzing.html">Fuzzing</a></h2>
         </div>  
+        <div class="article-section">
+            <img src="media/imagen4.png" alt="Sistemas de Defensa" class="article-image">
+            <h2><a href="hacking/defensa.html">Sistemas de Defensa</a></h2>
+        </div>  
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen4.png" alt="En proceso" class="article-image">
