--- a/hacking.html
+++ b/hacking.html
@@ -85,6 +85,10 @@
         <div class="article-section">
             <img src="media/imagen4.png" alt="Sistemas de Defensa" class="article-image">
             <h2><a href="hacking/defensa.html">Sistemas de Defensa</a></h2>
+        </div>
+        <div class="article-section">
+            <img src="media/imagen4.png" alt="Firewall" class="article-image">
+            <h2><a href="hacking/firewall.html">Firewall</a></h2>
         </div>  
         <!-- Nuevo artículo -->
         <div class="article-section">
