--- a/hacking.html
+++ b/hacking.html
@@ -87,6 +87,10 @@
             <h2><a href="hacking/defensa.html">Sistemas de Defensa</a></h2>
         </div>
         <div class="article-section">
+            <img src="media/imagen4.png" alt="Detección y Bloqueo de Tráfico de Red" class="article-image">
+            <h2><a href="hacking/deteccion.html">Detección y Bloqueo de Tráfico de Red</a></h2>
+        </div>  
+        <div class="article-section">
             <img src="media/imagen4.png" alt="Firewall" class="article-image">
             <h2><a href="hacking/firewall.html">Firewall</a></h2>
         </div>  
