--- a/hacking/deteccion.html
+++ b/hacking/deteccion.html
@@ -153,7 +153,8 @@ drop tcp any any -> 192.168.1.0/24 22 (msg:"Intento SSH bloqueado"; sid:1000002;
                     </ul>
                     <li>Configuración de adaptadores de red:</li>
                     <ul>
-                        <li>Primer adaptador de red: Configúralo en modo NAT.</li>
+                        <li>Primer adaptador de red:</li>
+                        <p>Configúralo en modo NAT.</p>
                         <li>Agregar un segundo adaptador de red:</li>
                         <p>Haz clic en "Add" y selecciona "Network Adapter".</p>
                         <p>Elige Custom y selecciona la opción VMnet1 (Host-only).</p>
