--- a/ia.html
+++ b/ia.html
@@ -30,7 +30,7 @@
             </div>
             <i class="fa-solid fa-bars" id="icon_menu"></i>
             <div class="header__botonMenu">
-                <input type="button" class="btn__header-botonMenu" value="Bonus">
+                <input type="button" class="btn__header-botonMenu" value="Aportar" onclick="window.open('https://buymeacoffee.com/ryuzak1', '_blank');">
             </div>
         </div>
     </header>
