--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
             </div>
             <i class="fa-solid fa-bars" id="icon_menu"></i>
             <div class="header__botonMenu">
-                <input type="button" class="btn__header-botonMenu" value="Bonus">
+                <input type="button" class="btn__header-botonMenu" value="Aportar" onclick="window.open('https://buymeacoffee.com/ryuzak1', '_blank');">            </div>
             </div>
-        </div>
     </header>
     <main>
         <div class="cover">
