--- a/hacking/archivos.html
+++ b/hacking/archivos.html
@@ -31,7 +31,7 @@
             </div>
             <i class="fa-solid fa-bars" style="color: #ffffff;" id="icon_menu"></i>
             <div class="header__botonMenu">
-                <input type="button" class="btn__header-botonMenu" value="Bonus">
+                <input type="button" class="btn__header-botonMenu" value="Aportar" onclick="window.open('https://buymeacoffee.com/ryuzak1', '_blank');">
             </div>
         </div>
     </header>
