--- a/ia/keras.html
+++ b/ia/keras.html
@@ -31,7 +31,7 @@
             </div>
             <i class="fa-solid fa-bars" style="color: #ffffff;" id="icon_menu"></i>
             <div class="header__botonMenu">
-                <input type="button" class="btn__header-botonMenu" value="Bonus">
+                <input type="button" class="btn__header-botonMenu" value="Aportar" onclick="window.open('https://buymeacoffee.com/ryuzak1', '_blank');">
             </div>
         </div>
     </header>
@@ -389,7 +389,7 @@
                 </div> 
                 <p>Keras y TensorFlow ofrecen un ecosistema robusto y flexible para el desarrollo de modelos de aprendizaje profundo. Desde la construcción de redes neuronales hasta la optimización y el preprocesamiento de datos, estas herramientas proporcionan a los desarrolladores las herramientas necesarias para abordar una amplia gama de problemas en el campo del aprendizaje automático y la inteligencia artificial.</p>
                 <h2>Ejemplos</h2>
-                <p>Haz click <a href="https://github.com/Detective-Ryuzak1/Machine-Learnig-examples/blob/main/Keras/keras.ipynb">aquí</a> para ver algunos ejemplos de uso con Keras.</p>
+                <p>Haz click <a href="https://github.com/Detective-Ryuzak1/Machine-Learnig-examples/blob/main/Keras/keras.ipynb" target="blank">aquí</a> para ver algunos ejemplos de uso con Keras.</p>
                 <br>
                 <br>
             </div>  
