--- a/ia/matplotlib.html
+++ b/ia/matplotlib.html
@@ -30,7 +30,7 @@
             </div>
             <i class="fa-solid fa-bars" style="color: #ffffff;" id="icon_menu"></i>
             <div class="header__botonMenu">
-                <input type="button" class="btn__header-botonMenu" value="Bonus">
+                <input type="button" class="btn__header-botonMenu" value="Aportar" onclick="window.open('https://buymeacoffee.com/ryuzak1', '_blank');">
             </div>
         </div>
     </header>
@@ -68,8 +68,8 @@
                     </div>
                 </div>
                 <h2>Ejemplos</h2>
-                <p>Haz click <a href="https://github.com/Detective-Ryuzak1/Machine-Learnig-examples/blob/main/MatplotLib/Matplotlib.ipynb">aquí</a> para ver algunos ejemplos de uso con Matplotlib.</p>
-                <p>También <a href="https://github.com/Detective-Ryuzak1/Machine-Learnig-examples/blob/main/MatplotLib/fifa-world-cup-data-analysis.ipynb">aquí</a> hay un ejemplo de cómo realizar una limpieza de datos y un análisis sobre datos recolectados de las anteriores ediciones de la Copa del Mundo.</p>
+                <p>Haz click <a href="https://github.com/Detective-Ryuzak1/Machine-Learnig-examples/blob/main/MatplotLib/Matplotlib.ipynb" target="blank">aquí</a> para ver algunos ejemplos de uso con Matplotlib.</p>
+                <p>También <a href="https://github.com/Detective-Ryuzak1/Machine-Learnig-examples/blob/main/MatplotLib/fifa-world-cup-data-analysis.ipynb" target="blank">aquí</a> hay un ejemplo de cómo realizar una limpieza de datos y un análisis sobre datos recolectados de las anteriores ediciones de la Copa del Mundo.</p>
                 <div class="blog-image-grande">
                     <img src="media/matplotlib2.png" alt="">
                 </div>
