--- a/ia/numpy.html
+++ b/ia/numpy.html
@@ -30,7 +30,7 @@
             </div>
             <i class="fa-solid fa-bars" style="color: #ffffff;" id="icon_menu"></i>
             <div class="header__botonMenu">
-                <input type="button" class="btn__header-botonMenu" value="Bonus">
+                <input type="button" class="btn__header-botonMenu" value="Aportar" onclick="window.open('https://buymeacoffee.com/ryuzak1', '_blank');">
             </div>
         </div>
     </header>
@@ -70,7 +70,7 @@
                 <h2>Conclusión</h2>
                 <p>NumPy es una biblioteca fundamental en el ecosistema de Python para el procesamiento y análisis de datos numéricos. Su eficiencia, capacidad de cálculo vectorizado y amplio conjunto de funciones lo convierten en una herramienta indispensable para científicos de datos, ingenieros y cualquier persona que trabaje con datos numéricos en Python. Aunque Python ofrece listas como una estructura de datos versátil, NumPy ofrece ventajas significativas en términos de velocidad, eficiencia y funcionalidad para tareas relacionadas con el procesamiento de datos numéricos.</p>
                 <h2>Ejemplos</h2>
-                <p>Haz click <a href="https://github.com/Detective-Ryuzak1/Machine-Learnig-examples/blob/main/Numpy/Numpy.ipynb">aquí</a> para ver algunos ejemplos de uso con Numpy.</p>
+                <p>Haz click <a href="https://github.com/Detective-Ryuzak1/Machine-Learnig-examples/blob/main/Numpy/Numpy.ipynb" target="blank">aquí</a> para ver algunos ejemplos de uso con Numpy.</p>
                 <div class="blog-image-grande">
                     <img src="media/numpy2.jpg" alt="">
                 </div>
