--- a/ia/pandas.html
+++ b/ia/pandas.html
@@ -30,7 +30,7 @@
             </div>
             <i class="fa-solid fa-bars" style="color: #ffffff;" id="icon_menu"></i>
             <div class="header__botonMenu">
-                <input type="button" class="btn__header-botonMenu" value="Bonus">
+                <input type="button" class="btn__header-botonMenu" value="Aportar" onclick="window.open('https://buymeacoffee.com/ryuzak1', '_blank');">
             </div>
         </div>
     </header>
@@ -117,7 +117,7 @@
                     <li><marcador class="resaltado8">OpenML:</marcador> OpenML es una plataforma que proporciona acceso a conjuntos de datos, herramientas y experimentos de Machine Learning. Ofrece una amplia gama de conjuntos de datos y permite a los usuarios compartir y colaborar en proyectos de Machine Learning.</li>
                 </ul>
                 <h2>Ejemplos</h2>
-                <p>Haz click <a href="https://github.com/Detective-Ryuzak1/Machine-Learnig-examples/blob/main/Pandas/Dragon_Ball_Pandas.ipynb">aquí</a> para ver algunos ejemplos de uso con Pandas.</p>
+                <p>Haz click <a href="https://github.com/Detective-Ryuzak1/Machine-Learnig-examples/blob/main/Pandas/Dragon_Ball_Pandas.ipynb" target="blank">aquí</a> para ver algunos ejemplos de uso con Pandas.</p>
                 <br>
                 <br>
             </div>  
