--- a/network/vlan.html
+++ b/network/vlan.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="../css/estilos-articulo.css">
 </head>
 <body>
-
     <header>
         <div class="container__header">
             <div class="logo">
@@ -30,7 +29,7 @@
             </div>
             <i class="fa-solid fa-bars" style="color: #ffffff;" id="icon_menu"></i>
             <div class="header__botonMenu">
-                <input type="button" class="btn__header-botonMenu" value="Bonus">
+                <input type="button" class="btn__header-botonMenu" value="Aportar" onclick="window.open('https://buymeacoffee.com/ryuzak1', '_blank');">
             </div>
         </div>
     </header>
@@ -719,6 +718,7 @@ Switch4# copy running-config startup-config</code></pre>
             </div>
         </div>       
     </main>
+
     <script src="../js/script.js"></script>
 </body>
 </html>
