--- a/network/unknown.html
+++ b/network/unknown.html
@@ -30,7 +30,7 @@
             </div>
             <i class="fa-solid fa-bars" style="color: #ffffff;" id="icon_menu"></i>
             <div class="header__botonMenu">
-                <input type="button" class="btn__header-botonMenu" value="Bonus">
+                <input type="button" class="btn__header-botonMenu" value="Aportar" onclick="window.open('https://buymeacoffee.com/ryuzak1', '_blank');">
             </div>
         </div>
     </header>
@@ -39,8 +39,8 @@
             <div class="text__articulo-cover">
                 <h1></h1>
                 <p></p>
-            </div>  
-        </div>     
+            </div>
+        </div>       
     </main>
     <script src="../js/script.js"></script>
 </body>
