--- a/network.html
+++ b/network.html
@@ -114,6 +114,10 @@
             <img src="media/imagen2.png" alt="Enlaces de Agregación" class="article-image">
             <h2><a href="network/enlace.html">Enlaces de Agregación</a></h2>
         </div>  
+        <div class="article-section">
+            <img src="media/imagen2.png" alt="Rutas Estáticas" class="article-image">
+            <h2><a href="network/static.html">Rutas Estáticas</a></h2>
+        </div> 
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen2.png" alt="En proceso" class="article-image">
